--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Моя первая программа</title>
-		<script>
-			alert('Привет, это моя первая программа!');
-		</script>
+		<script src="script.js"></script>
+        <script src="script2.js"></script>
+        <script src="script3.js"></script>
 	</head>
 	<body>
 		Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos neque recusandae nisi odio, vero accusamus ullam, nemo dicta quia ducimus distinctio, inventore rem eius veniam voluptatibus debitis perferendis est veritatis.
